[gd_scene load_steps=18 format=3 uid="uid://dmh2s7rs0x0hm"]

[ext_resource type="PackedScene" uid="uid://dsk7j0ruai0f" path="res://Assets/MdlScenes/map.tscn" id="1_a02cp"]
[ext_resource type="Script" uid="uid://pvbvf1hqr05m" path="res://Scripts/world.gd" id="1_fo5ed"]
[ext_resource type="StyleBox" uid="uid://ddina06l4i3e3" path="res://Resources/HoverStyleBox.tres" id="2_8j60k"]
[ext_resource type="StyleBox" uid="uid://dbx2hdhadyav4" path="res://Resources/PressedStyleBox.tres" id="3_fo5ed"]
[ext_resource type="StyleBox" uid="uid://dagw6hrvriujv" path="res://Resources/NormalStyleBox.tres" id="4_5ukr8"]
[ext_resource type="Texture2D" uid="uid://lnakws7a23fr" path="res://Assets/Textures/Cursor.png" id="6_5ukr8"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_fj7yv"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_tlwt5"]
sky_material = SubResource("ProceduralSkyMaterial_fj7yv")

[sub_resource type="Environment" id="Environment_aqk2v"]
background_mode = 2
sky = SubResource("Sky_tlwt5")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxOccluder3D" id="BoxOccluder3D_go701"]
size = Vector3(9.06193, 2.37701, 2.52317)

[sub_resource type="BoxOccluder3D" id="BoxOccluder3D_5a7ea"]
size = Vector3(1.8965, 3.72475, 2.07791)

[sub_resource type="SystemFont" id="SystemFont_a02cp"]
font_names = PackedStringArray("Ethnocentric")

[sub_resource type="SystemFont" id="SystemFont_go701"]
font_names = PackedStringArray("Ethnocentric")
font_italic = true

[sub_resource type="SystemFont" id="SystemFont_5a7ea"]
font_names = PackedStringArray("Ethnocentric")
font_italic = true

[sub_resource type="SystemFont" id="SystemFont_fo5ed"]
font_names = PackedStringArray("Ethnocentric")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o06y3"]
bg_color = Color(0.105882, 1, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k7acu"]
bg_color = Color(1, 0.168627, 0.0392157, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_right = 15
corner_radius_bottom_right = 15

[node name="World" type="Node3D"]
script = ExtResource("1_fo5ed")

[node name="Enviorment" type="Node3D" parent="."]

[node name="Sun" type="DirectionalLight3D" parent="Enviorment"]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Env" type="WorldEnvironment" parent="Enviorment"]
environment = SubResource("Environment_aqk2v")

[node name="Map" parent="." instance=ExtResource("1_a02cp")]

[node name="Occs" type="Node3D" parent="."]

[node name="OccluderInstance3D" type="OccluderInstance3D" parent="Occs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.2588, 0.394646, 4.54896)
occluder = SubResource("BoxOccluder3D_go701")

[node name="OccluderInstance3D2" type="OccluderInstance3D" parent="Occs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.2588, 0.394646, -4.40464)
occluder = SubResource("BoxOccluder3D_go701")

[node name="OccluderInstance3D3" type="OccluderInstance3D" parent="Occs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.3064, 0.394646, -4.52255)
occluder = SubResource("BoxOccluder3D_go701")

[node name="OccluderInstance3D4" type="OccluderInstance3D" parent="Occs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.3064, 0.394646, 4.38766)
occluder = SubResource("BoxOccluder3D_go701")

[node name="OccluderInstance3D5" type="OccluderInstance3D" parent="Occs"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4.49835, 0.394646, 13.3225)
occluder = SubResource("BoxOccluder3D_go701")

[node name="OccluderInstance3D6" type="OccluderInstance3D" parent="Occs"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.35849, 0.394646, 13.3225)
occluder = SubResource("BoxOccluder3D_go701")

[node name="OccluderInstance3D7" type="OccluderInstance3D" parent="Occs"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4.39944, 0.394646, -13.2695)
occluder = SubResource("BoxOccluder3D_go701")

[node name="OccluderInstance3D8" type="OccluderInstance3D" parent="Occs"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.52656, 0.394646, -13.2695)
occluder = SubResource("BoxOccluder3D_go701")

[node name="OccluderInstance3D9" type="OccluderInstance3D" parent="Occs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.5892, 1.3926, -7.9801)
occluder = SubResource("BoxOccluder3D_5a7ea")

[node name="OccluderInstance3D10" type="OccluderInstance3D" parent="Occs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.95439, 1.3926, 7.60547)
occluder = SubResource("BoxOccluder3D_5a7ea")

[node name="OccluderInstance3D11" type="OccluderInstance3D" parent="Occs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.61721, 1.3926, 7.96894)
occluder = SubResource("BoxOccluder3D_5a7ea")

[node name="OccluderInstance3D12" type="OccluderInstance3D" parent="Occs"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.95936, 1.3926, -7.59572)
occluder = SubResource("BoxOccluder3D_5a7ea")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -307.0
offset_top = -285.0
offset_right = 308.0
offset_bottom = 304.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(4.23551e-06, 0.82958, 0.814838, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 85
theme_override_fonts/font = SubResource("SystemFont_a02cp")
theme_override_font_sizes/font_size = 155
text = "COB 1"
horizontal_alignment = 1

[node name="Host" type="Button" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(2.88785e-07, 0.703044, 0.692938, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0.827451, 0.815686, 1)
theme_override_colors/font_pressed_color = Color(4.33177e-07, 0.549358, 0.5413, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = SubResource("SystemFont_go701")
theme_override_font_sizes/font_size = 45
theme_override_styles/hover = ExtResource("2_8j60k")
theme_override_styles/pressed = ExtResource("3_fo5ed")
theme_override_styles/normal = ExtResource("4_5ukr8")
text = "Host
"

[node name="Join" type="Button" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.701961, 0.694118, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0.827451, 0.815686, 1)
theme_override_colors/font_pressed_color = Color(0, 0.54902, 0.541176, 1)
theme_override_constants/outline_size = 27
theme_override_fonts/font = SubResource("SystemFont_5a7ea")
theme_override_font_sizes/font_size = 45
theme_override_styles/hover = ExtResource("2_8j60k")
theme_override_styles/pressed = ExtResource("3_fo5ed")
theme_override_styles/normal = ExtResource("4_5ukr8")
text = "Join
"

[node name="Addr" type="LineEdit" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_fo5ed")
theme_override_font_sizes/font_size = 37
placeholder_text = "198.168.x.xx"
alignment = 1

[node name="HUD" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Cursor" type="TextureRect" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03, 0.03)
pivot_offset = Vector2(576, 324)
texture = ExtResource("6_5ukr8")
stretch_mode = 3

[node name="HealthBar" type="ProgressBar" parent="UI/HUD"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.322917
anchor_right = 0.69184
anchor_bottom = 0.0632716
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_o06y3")
theme_override_styles/fill = SubResource("StyleBoxFlat_k7acu")
max_value = 3.0
step = 1.0
allow_lesser = true
fill_mode = 1
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://xuk6ctah3bsc")
spawn_path = NodePath("..")

[connection signal="pressed" from="UI/MainMenu/MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="UI/MainMenu/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
